# autosup

./: .env  .gitignore  README.md  api-contract.md  autosup.md  readme.md  render.yaml
.claude/: settings.local.json
backend/: README.md  blockchain.py  main.py  main_teammate.py  railway.json  requirements.txt  seed_april_orders.py  seed_balanced_orders.py  seed_city_orders.py  seed_comprehensive.py  seed_credit_payments.py  seed_existing_partnerships.py  seed_ghost_distributors.py  seed_mou_pdfs.py  seed_partnerships.py  seed_retailer_orders.py  seed_retailer_rafi_debug.py
contracts/: README.md
contracts/escrow/: Anchor.toml
contracts/partnership-nft/: Anchor.toml  Cargo.toml
contracts/partnership-nft/programs/autosup-partnership-nft/: Cargo.toml
contracts/partnership-nft/programs/autosup-partnership-nft/src/: lib.rs
contracts/partnership-nft/tests/: autosup-partnership-nft.ts
contracts/reputation/: Anchor.toml  Cargo.toml
database/: migration_db_hardening.sql  migration_full_data_isolation.sql  migration_xendit_payment_transactions.sql
frontend/: AGENTS.md  CLAUDE.md  CONTEXT.md  PRD.md  README.md  api-contract.md  autosup-complete.md  package-lock.json  package.json  proxy.ts
frontend/.claude/: settings.local.json
frontend/app/: globals.css  layout.tsx
frontend/components/: providers.tsx  solana-wallet-provider.tsx
frontend/hooks/: useAiAgents.ts  useAnalytics.ts  useAuth.ts  useCredit.ts  useDashboard.ts  useDemand.ts  useDistributors.ts  useGeoDemand.ts  useInventory.ts  useLogistics.ts  useOrders.ts  usePartnerships.ts  usePayment.ts  (+6 more)
(+110 files in other folders)
