[package]
name = "autosup-partnership-nft"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true, features = ["metadata"] }
solana-program = { workspace = true }
hex = "0.4"
